crates/uitest/fixtures/name_resolution/conflict_contract_field.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/conflict_contract_field.fe
---
error[3-0017]: duplicate field name in contract `MyContract`
  ┌─ conflict_contract_field.fe:2:9
  │
2 │     mut value: u256,
  │         ^^^^^ `value` is defined here
3 │     mut value: u256,
  │         ----- `value` is redefined here
